fix overflow in reviews

--- a/style/style.scss
+++ b/style/style.scss
@@ -983,6 +983,7 @@ html {
 
   .reviews {
     margin-top: 190px;
+    overflow-x: hidden;
     .container {
       display: flex;
       justify-content: center;
